update sim notes

--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -1,44 +1,103 @@
 ---
 title: Robotics Simulators
 description: A (almost) complete list of robotics simulators
+bibliography: ros-2.bib
 ---
+
+@gutierrezDistributedRealtimeFramework2018
 
 This list is intended to be as complete as possible but obviously it is virtually impossible to list **ALL** the robot simulators out there, that's the reason why the “almost” in the description of this note. In case you know of a simulator that is not included in this list, here are the possible reasons for its absence:
 - I haven't updated the list yet: there are always new simulators.
 - I have not yet come across it: the simulator can be very niche.
 - The "simulator" could be a random project of someone on the internet. In that case it is up to my personal judgment to include it or not, depending on the value of the simulator, clearly this is subject to my personal bias.
 
+## Disambiguations
+
+- [Physics engine - Wikipedia](https://en.wikipedia.org/wiki/Physics_engine) *"is computer software that provides an approximate simulation of certain physical systems, typically classical dynamics, including rigid body dynamics (including collision detection), soft body dynamics, and fluid dynamics."*
+- [Render engine] a list with some explames in [List of 3D rendering software - Wikipedia](https://en.wikipedia.org/wiki/List_of_3D_rendering_software)
+- [Game engine - Wikipedia](https://en.wikipedia.org/wiki/Game_engine) as reference see [List of game engines](https://en.wikipedia.org/wiki/List_of_game_engines): *"is a software framework primarily designed for the development of video games which generally includes relevant libraries and support programs such as a level editor."*
+- [Robotics simulator - Wikipedia](https://en.wikipedia.org/wiki/Robotics_simulator): *"is a simulator used to create an application for a physical robot without depending on the physical machine, thus saving cost and time."*
+
+What makes a robotics simulator a robotics simulator:
+- robot model support: Support for standard robotic models (URDF, SDF)
+- sensors: LIDAR, cameras, IMU, force-torque
+- Multi-body Dynamics: Simulates rigid and soft body interactions relevant to robots.
+- Sensor Noise & Distortions: Allows realistic sensor imperfections for real-world applicability.
+- physics Fidelity: More focus on realistic kinematics and dynamics rather than high-speed rendering.
+- Direct API: for multiples programming languages
+- communication APIs
+
+## Overview
+
+| Name                                                                                        | Paper                                         | Physics Engine                                                        | Rendering                                                        | Models | Features | Languages                                                                                                                                          | Licenses    | Active | Source code                                                   |
+|---------------------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------|------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|-------------|--------|---------------------------------------------------------------|
+| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               | DARTsim,<br/>Bullet,<br/>TPE                                          | OGRE 1.x,<br/>OGRE-Next 2.x,<br/>OptiX                           |        |          | C++, Python                                                                                                                                        | Apache 2.0  |        | [github](https://github.com/gazebosim/gz-sim)                 |
+| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     | [ODE](https://cyberbotics.com/doc/reference/ode-open-dynamics-engine) | [OpenGL](https://cyberbotics.com/doc/blog/Webots-2018-b-release) |        |          | C,<br/>C++,<br/>Java,<br/>Python,<br/>MATLAB,<br/>TCP/IP,<br/>[see language-setup for reference](https://cyberbotics.com/doc/guide/language-setup) | Apache 2.0  |        | [github](https://github.com/cyberbotics/webots)               |
+| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | Bullet                                                                | OpenGL, TinyRenderer (built-in CPU renderer)                     |        |          | C,<br/>C++,<br/>Python                                                                                                                             | zlib        |        | [github](https://github.com/bulletphysics/bullet3)            |
+| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             | PhysX (default),<br/>Chaos Physics (UE >= 5)                          |                                                                  |        |          |                                                                                                                                                    | MIT License |        | [github](https://github.com/microsoft/AirSim)                 |
+| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/ilpincy/argos3)                   |
+| [AI2-Thor](https://ai2thor.allenai.org/)                                                    | @kolveAI2THORInteractive3D2022                |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/allenai/ai2thor)                  |
+| [ARTE](https://arvc.umh.es/arte/index_en.html)                                              | @gilDevelopmentDeploymentNew2015              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
+| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
+| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/carla-simulator/carla)            |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/)                           | @rohmerVREPVersatileScalable2013              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
+| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/graspit-simulator/graspit)        |
+| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/facebookresearch/habitat-sim)     |
+| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                           |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
+| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/morse-simulator/morse)            |
+| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | Bullet                                                                |                                                                  |        |          | Python                                                                                                                                             |             |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
+| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/haosulab/SAPIEN)                  |
+| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/haosulab/ManiSkill)               |
+| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
+| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
+| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
+| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/MRPT/mvsim)                       |
+| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
+| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/uzh-rpg/flightmare)               |
+| [O3DE](https://o3de.org/)                                                                   |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/o3de/o3de)                        |
+| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
+| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/mit-aera/FlightGoggles)           |
+| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        |                                                                       |                                                                  |        |          | C++, Python                                                                                                                                        |             |        |                                                               |
 
 
-| Name                                                                                        | Paper                                         | Physics Engine                                     | Rendering | Models | Features | Languages   | Licenses | Active | Source code                                                   |
-|---------------------------------------------------------------------------------------------|-----------------------------------------------|----------------------------------------------------|-----------|--------|----------|-------------|----------|--------|---------------------------------------------------------------|
-| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             |                                                    |           |        |          |             |          |        | [github](https://github.com/microsoft/AirSim)                 |
-| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         |                                                    |           |        |          |             |          |        | [github](https://github.com/ilpincy/argos3)                   |
-| [AI2-Thor](https://ai2thor.allenai.org/)                                                    | @kolveAI2THORInteractive3D2022                |                                                    |           |        |          |             |          |        | [github](https://github.com/allenai/ai2thor)                  |
-| [ARTE](https://arvc.umh.es/arte/index_en.html)                                              | @gilDevelopmentDeploymentNew2015              |                                                    |           |        |          |             |          |        | [github](https://github.com/4rtur1t0/ARTE)                    |
-| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           |                                                    |           |        |          |             |          |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
-| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      |                                                    |           |        |          |             |          |        | [github](https://github.com/carla-simulator/carla)            |
-| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/)                           | @rohmerVREPVersatileScalable2013              |                                                    |           |        |          |             |          |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
-| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/gazebosim/gz-sim)                 |
-| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                    |           |        |          |             |          |        | [github](https://github.com/graspit-simulator/graspit)        |
-| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                    |           |        |          |             |          |        | [github](https://github.com/facebookresearch/habitat-sim)     |
-| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | [NVIDIAPhysX](https://en.wikipedia.org/wiki/PhysX) |           |        |          |             |          |        |                                                               |
-| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                    |           |        |          |             |          |        | [github](https://github.com/morse-simulator/morse)            |
-| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | [Bullet](https://github.com/bulletphysics/bullet3) |           |        |          | Python      |          |        | [github](https://github.com/bulletphysics/bullet3)            |
-| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | [Bullet](https://github.com/bulletphysics/bullet3) |           |        |          | Python      |          |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
-| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                    |           |        |          |             |          |        | [github](https://github.com/haosulab/SAPIEN)                  |
-| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/haosulab/ManiSkill)               |
-| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                    |           |        |          |             |          |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
-| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     |                                                    |           |        |          |             |          |        | [github](https://github.com/cyberbotics/webots)               |
-| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                    |           |        |          |             |          |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
-| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                    |           |        |          |             |          |        |                                                               |
-| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                    |           |        |          |             |          |        | [github](https://github.com/MRPT/mvsim)                       |
-| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                    |           |        |          |             |          |        |                                                               |
-| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                    |           |        |          |             |          |        | [github](https://github.com/uzh-rpg/flightmare)               |
-| [O3DE](https://o3de.org/)                                                                   |                                               |                                                    |           |        |          |             |          |        | [github](https://github.com/o3de/o3de)                        |
-| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                    |           |        |          |             |          |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
-| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                    |           |        |          |             |          |        | [github](https://github.com/mit-aera/FlightGoggles)           |
-| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        |                                                    |           |        |          | C++, Python |          |        |                                                               |
+
+Physics Engines:
+- [TPE](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo.
+- [DARTsim](https://dartsim.github.io/)
+- [Bullet](https://github.com/bulletphysics/bullet3)
+- [PhysX](https://github.com/NVIDIA-Omniverse/PhysX)
+- [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco)
+- [ODE (Open Dynamics Engine)](https://www.ode.org/), [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)
+
+Game engines:
+- [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
+- [Unity uses PhysX as physic engine](https://docs.unity3d.com/Manual/PhysicsSection.html)
+
+List frameworks and integrations:
+- gazebo: [Gazebo integrations](https://gazebosim.org/docs/latest/projects_using_gazebo/#gazebo-integrations)
+
+Multi-body dynamics:
+- rigid: rigid bodies
+- soft: soft bodies
+- aero: aerodynamics
+- granular: granular materials (like sand)
+- fluid: fluid dynamics
+- vehicles
+- uav: unmanned aerial vehicles (like drones)
+- medical
+- molecules
+- parallel: parallel mechanism (like Stewart platform)
+
+Features on Simulation, Analysis, Planning, Control Design:
+- dm: discrete mechanics
+- ik: inverse kinematics solvers (please find IK specialized packages in this list)
+- id: inverse dynamics
+- slam: simultaneous localization and mapping
+- trj-opt: trajectory optimization
+- plan: motion planning algorithms
+- cv: computer vision
+- urdf: urdf parser
+- sdf: sdf parser
 
 
 Cool projects:
@@ -46,7 +105,7 @@ Cool projects:
 - [robot-gui](https://github.com/glumb/robot-gui) by Maximilian Beck
 
 Subject specific:
-- [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [gitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
+- [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [bitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
 
 
 ## from /Ly0n/awesome-robotic-tooling
