fix typo and add some extra info

--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -1,7 +1,6 @@
 ---
 title: Robotics Simulators
 description: A (almost) complete list of robotics simulators
-bibliography: ros-2.bib
 ---
 
 @gutierrezDistributedRealtimeFramework2018
@@ -14,7 +13,7 @@ This list is intended to be as complete as possible but obviously it is virtuall
 ## Disambiguations
 
 - [Physics engine - Wikipedia](https://en.wikipedia.org/wiki/Physics_engine) *"is computer software that provides an approximate simulation of certain physical systems, typically classical dynamics, including rigid body dynamics (including collision detection), soft body dynamics, and fluid dynamics."*
-- [Render engine] a list with some explames in [List of 3D rendering software - Wikipedia](https://en.wikipedia.org/wiki/List_of_3D_rendering_software)
+- [Render engine] a list with some examples in [List of 3D rendering software - Wikipedia](https://en.wikipedia.org/wiki/List_of_3D_rendering_software)
 - [Game engine - Wikipedia](https://en.wikipedia.org/wiki/Game_engine) as reference see [List of game engines](https://en.wikipedia.org/wiki/List_of_game_engines): *"is a software framework primarily designed for the development of video games which generally includes relevant libraries and support programs such as a level editor."*
 - [Robotics simulator - Wikipedia](https://en.wikipedia.org/wiki/Robotics_simulator): *"is a simulator used to create an application for a physical robot without depending on the physical machine, thus saving cost and time."*
 
@@ -40,7 +39,7 @@ What makes a robotics simulator a robotics simulator:
 | [ARTE](https://arvc.umh.es/arte/index_en.html)                                              | @gilDevelopmentDeploymentNew2015              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
 | [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
 | [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/carla-simulator/carla)            |
-| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/)                           | @rohmerVREPVersatileScalable2013              |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              |                                                                       |                                                                  |        |          |                                                                                                                                                    | GNU GPL     |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
 | [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/graspit-simulator/graspit)        |
 | [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                       |                                                                  |        |          |                                                                                                                                                    |             |        | [github](https://github.com/facebookresearch/habitat-sim)     |
 | [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                           |                                                                  |        |          |                                                                                                                                                    |             |        |                                                               |
